--- a/application/templates/tasks/new.html
+++ b/application/templates/tasks/new.html
@@ -1,8 +1,20 @@
 {% extends "layout.html" %}
-  
-{% block body %}
-<form method="POST" action="{{ url_for('tasks_create') }}">
-  <input type="text" name="name"/>
-  <input type="submit" value="Add a new task"/>
-</form>
-{% endblock %}
+
+  {% block body %}
+  <form method="POST" action="{{ url_for('tasks_create') }}">
+    <table>
+      <tr>
+	<td>
+	  {{ form.name.label }}
+	</td>
+	<td>
+	  {{ form.name }}
+	</td>
+      </tr>
+      <tr>
+	<td colspan="2">
+	  <input type="submit" value="Add a new task"/>
+	</td>
+      </tr>
+  </form>
+  {% endblock %}
