--- a/application/templates/tasks/new.html
+++ b/application/templates/tasks/new.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+  {% extends "layout.html" %}
 
   {% block body %}
   <form method="POST" action="{{ url_for('tasks_create') }}">
@@ -10,9 +10,26 @@
 	<td>
 	  {{ form.name }}
 	</td>
+	<td>
+	  <ul>
+	    {% for error in form.name.errors %}
+	    <li>{{ error }}</li>
+	    {% endfor %}
+	  </ul>
+	</td>
       </tr>
       <tr>
-	<td colspan="2">
+	<td>
+	  {{ form.done.label }}
+	</td>
+	<td>
+	  {{ form.done }}
+	</td>
+	<td>
+	</td>
+      </tr>
+      <tr>
+	<td colspan="3">
 	  <input type="submit" value="Add a new task"/>
 	</td>
       </tr>
