--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,14 +2,14 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>TodoApplication</title>
+      <title>PunttiPate</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     
     <body>
 
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-	<a class="navbar-brand" href="#">TodoApplication</a>
+	<a class="navbar-brand" href="#">PunttiPate</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
 	</button>
@@ -25,8 +25,10 @@
           <div class="form-inline mt-2 mt-md-0">
 	    {% if current_user.is_authenticated %}
 	    <a href="{{ url_for('auth_logout') }}">Hello {{ current_user.name }} -- Logout</a>
-	    {% else %}
-	    <a href="{{ url_for('auth_login') }}">Login</a>
+      {% else %}
+      <a href="{{ url_for('auth_signup') }}">Register</a>
+      <p>&nbsp; &nbsp;</p>
+      <a href="{{ url_for('auth_login') }}">Login</a>
 	    {% endif %}
           </div>
 	</div>
