alettiin muokkaamaan sovelluksesta oman näköistä. Esim. luotiin Bench luokka ja sille listaus ja lisäys metodit

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <p>
-  Hello world!
+  Welcome to PunttiPate! Add a new achievement or take a look at the top performances.
 </p>
 
 {% if needs_tasks is defined %}
