--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,22 +9,27 @@
     <body>
 
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-	<a class="navbar-brand" href="#">PunttiPate</a>
+	<a class="navbar-brand" href="/">PunttiPate</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
+        {% if current_user.is_authenticated %}
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('tasks_index') }}">List tasks</a>
+              <a class="nav-link" href="{{ url_for('bench_index') }}">My Performances</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('tasks_form') }}">Add a task</a>
+              <a class="nav-link" href="{{ url_for('tasks_index') }}">Tasks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('tasks_form') }}">Add a Performance</a>
             </li>
           </ul>
+        {% endif %}
           <div class="form-inline mt-2 mt-md-0">
 	    {% if current_user.is_authenticated %}
-	    <a href="{{ url_for('auth_logout') }}">Hello {{ current_user.name }} -- Logout</a>
+	    <a href="{{ url_for('auth_logout') }}">Logout</a>
       {% else %}
       <a href="{{ url_for('auth_signup') }}">Register</a>
       <p>&nbsp; &nbsp;</p>
