--- a/application/templates/tasks/list.html
+++ b/application/templates/tasks/list.html
@@ -15,6 +15,9 @@
 	<form method="POST" action="{{ url_for('tasks_set_done', task_id=task.id) }}">
 	  <input type="submit" value="Change status!"/>
 	</form>
+    <form method="POST" action="{{ url_for('tasks_delete', task_id=task.id) }}">
+	  <input type="submit" value="Delete task!"/>
+	</form>
       </td>
     </tr>
     {% endfor %}
