aloitettiin rakentamaan toiminnalisuuden yleistämistä kaikille eri punttiliikkeille

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -20,7 +20,7 @@
               <a class="nav-link" href="{{ url_for('bench_index') }}">My Performances</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('bench_form') }}">Add a new Lift</a>
+              <a class="nav-link" href="{{ url_for('bench_add') }}">Add a new Lift</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('tasks_index') }}">Tasks</a>
