--- a/application/templates/lift/new.html
+++ b/application/templates/lift/new.html
@@ -1,6 +1,15 @@
   {% extends "layout.html" %}
 
-  {% block body %}
+	{% block body %}
+	<h2>
+		Add a new Max
+	</h2>
+	<br>
+	<br>
+	<br>
+	<h5>
+		Benchpress
+	</h5>
   <form method="POST" action="{{ url_for('bench_create') }}">
     <table>
       <tr>
@@ -36,8 +45,10 @@
 	</td>
       </tr>
       <tr>
-	<td colspan="3">
-	  <input type="submit" value="Add a new lift!"/>
+				<td></td>
+	<td>
+		
+		<input type="submit" value="Add!"/>
 	</td>
       </tr>
     </table>
