Lisättiin toiminnallisuus kaikkien punttitulosten lisäämiseen ja ja listaamiseen suuruusjärjestyksessä. Käyttäjä näkee vain omia tuloksiaan. Hiottiin myös ulkoasua siistimmäksi.

--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -2,6 +2,10 @@
 
 {% block body %}
 {{ error }}
+<h4>
+    Login
+</h4>
+<br>
 <form method="POST" action="{{ url_for('auth_login') }}">
   <table>
     <tr>
