--- a/application/templates/lift/new.html
+++ b/application/templates/lift/new.html
@@ -45,7 +45,7 @@
 	<td>
 	  <ul>
 	    {% for error in form.date.errors %}
-	    <li>Insert date in form: dd.mm.yyyy</li>
+	    <li> Insert date in form dd.mm.yyyy </li>
 	    {% endfor %}
 	  </ul>
 	  </tr>
