--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -2,9 +2,12 @@
 
 {% block body %}
 {{ error }}
+<tr>
+
 <h4>
     Login
 </h4>
+</tr>
 <br>
 <form method="POST" action="{{ url_for('auth_login') }}">
   <table>
@@ -25,8 +28,9 @@
       </td>
     </tr>
     <tr>
+        <td></td>
       <td colspan="2">
-	<input type="submit" value="Login"/>
+	<input type="submit" class="btn btn-primary" value="Login"/>
       </td>
     </tr>
   </table>
