--- a/application/templates/auth/signupform.html
+++ b/application/templates/auth/signupform.html
@@ -19,7 +19,7 @@
       {% for error in form.name.errors %}
 			<li>{{ error }}</li>
 		{% endfor %}
-    <tr>
+
     <tr>
       <td>
 	{{ form.username.label }}
@@ -43,7 +43,7 @@
     {% for error in form.password.errors %}
 			<li>{{ error }}</li>
 		{% endfor %}
-          <tr>
+      <tr>
       <td>
 	{{ form.confirm.label }}
       </td>
@@ -56,8 +56,9 @@
 		{% endfor %}
 
     <tr>
+        <td></td>
       <td colspan="2">
-	<input type="submit" value="Signup"/>
+	<input type="submit" class="btn btn-success" value="Signup"/>
       </td>
     </tr>
     </table>
