Lisättiin kuvaukset toiminnallisuuksiin

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <p>
-  Welcome to PunttiPate! Add a new achievement or take a look at the top performances.
+  Welcome to PunttiPate! Register to add your own lifts.
 </p>
 
 {% endblock %}
