--- a/application/templates/auth/signupform.html
+++ b/application/templates/auth/signupform.html
@@ -58,7 +58,7 @@
     <tr>
         <td></td>
       <td colspan="2">
-	<input type="submit" class="btn btn-success" value="Signup"/>
+	<input type="submit" class="btn btn-info" value="Signup"/>
       </td>
     </tr>
     </table>
