--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,11 +5,76 @@
   <h4>
     Welcome to PunttiPate!
   </h4>
+    <h5>
+    Here are all the best lifts and lifters.
+  </h5>
   {% else %}
   <p>
     Welcome to PunttiPate! Register to add your own lifts.
   </p>
-
+    <h5>
+    Here are all the best lifts and lifters.
+  </h5>
 {% endif %}
+
+
+<br><br>
+<table>
+    <h4>
+        Benchpress
+    </h4>
+    <tr>
+      <th>Weight&nbsp; &nbsp;</th>
+      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+        <th>Lifter</th>
+    </tr>
+    {% for bench in benches %}
+    <tr>
+      <td>{{ bench.weight }}</td>
+      <td>{{ bench.date }}</td>
+        <td>{{ bench.name }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+
+    <br>
+    <table>
+    <h4>
+        Squat
+    </h4>
+    <tr>
+      <th>Weight&nbsp; &nbsp;</th>
+      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+        <th>Lifter</th>
+    </tr>
+    {% for squat in squats %}
+    <tr>
+      <td>{{ squat.weight }}</td>
+      <td>{{ squat.date }}</td>
+        <td>{{ squat.name }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+
+    <br>
+    <table>
+    <h4>
+        Deadlift
+    </h4>
+    <tr>
+      <th>Weight&nbsp; &nbsp;</th>
+      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+        <th>Lifter</th>
+    </tr>
+    {% for dead in deads %}
+    <tr>
+      <td>{{ dead.weight }}</td>
+      <td>{{ dead.date }}</td>
+        <td>{{ dead.name }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+
+
 
 {% endblock %}
