--- a/application/templates/lift/list.html
+++ b/application/templates/lift/list.html
@@ -5,12 +5,12 @@
     {{current_user.name}}s Lifts
   </h2>
     <p>
-     Public lifts will (at some point) show on the front page for everyone to see.
+     The best public lift in each category will show on the front page for everyone to see.
     </p>
 
 
   <br>
-  <table>
+  <table class="table">
     <h4>
         Benchpress
     </h4>
@@ -38,8 +38,7 @@
     {% endfor %}
     </table>
 
-    <br>
-    <table>
+    <table class="table">
     <h4>
         Squat
     </h4>
@@ -68,8 +67,7 @@
     {% endfor %}
     </table>
 
-    <br>
-    <table>
+    <table class="table">
     <h4>
         Deadlift
     </h4>
