--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -8,7 +8,7 @@
     
     <body>
 
-      <nav class="navbar navbar-expand-md navbar-success bg-muted mb-4" style="background-color: #e3f2fd;">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" style="background-color: #e3f2fd;">
 	<a class="navbar-brand" href="/">PunttiPate</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
         {% endif %}
           <div class="form-inline mt-2 mt-md-0">
 	    {% if current_user.is_authenticated %}
-        <tr>{{current_user.name}}&nbsp; &nbsp; &nbsp; &nbsp;</tr>
+        <h6 class="navbar-brand">{{current_user.name}} &nbsp; </h6>
 	    <a class="nav-link" href="{{ url_for('auth_logout') }}">Logout</a>
       {% else %}
       <a class="nav-link" href="{{ url_for('auth_signup') }}">Register</a>
