pientä ulkoasun siistimistä sekä readmeen tieto gym tietokohteen validoimattomuudesta ja listaamisen puuttumisesta

--- a/application/templates/lift/list.html
+++ b/application/templates/lift/list.html
@@ -72,9 +72,9 @@
         Deadlift
     </h4>
     <tr>
-      <th>Weight&nbsp; &nbsp;</th>
-      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
-      <th>Public&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+      <th>Weight</th>
+      <th>Date</th>
+      <th>Public</th>
       <th>Delete</th>
     </tr>
     {% for dead in deads %}
