pientä ulkoasun siistimistä: poistettiin tyhjiä välejä omien tulosten listauksesta

--- a/application/templates/lift/list.html
+++ b/application/templates/lift/list.html
@@ -15,9 +15,9 @@
         Benchpress
     </h4>
     <tr>
-      <th>Weight&nbsp; &nbsp;</th>
-      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
-      <th>Public&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+      <th>Weight</th>
+      <th>Date</th>
+      <th>Public</th>
       <th>Delete</th>
     </tr>
     {% for bench in benches %}
@@ -43,9 +43,9 @@
         Squat
     </h4>
     <tr>
-      <th>Weight&nbsp; &nbsp;</th>
-      <th>Date&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
-      <th>Public&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</th>
+      <th>Weight</th>
+      <th>Date</th>
+      <th>Public</th>
       <th>Delete</th>
     </tr>
     {% for squat in squats %}
