Luotiin validoinnit gymien lisäämiseen käyttäjälle ja muokattiin formit siistimpään ulkoasuun

--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -16,7 +16,7 @@
 	{{ form.username.label }}
       </td>
       <td>
-	{{ form.username }}
+	{{ form.username(class_="form-control") }}
       </td>
     </tr>
     <tr>
@@ -24,7 +24,7 @@
 	{{ form.password.label }}
       </td>
       <td>
-	{{ form.password }}
+	{{ form.password(class_="form-control") }}
       </td>
     </tr>
     <tr>
