--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -21,6 +21,9 @@
               <a class="nav-link" href="{{ url_for('bench_index') }}">My Lifts</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('gym_index') }}">My Gyms</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('bench_form') }}">Add a Lift</a>
             </li>
           </ul>
