Siirreettiin gymiin liittyvät asiat omaan kansioonsa. Muokattiin userstory sovellusta vastaavaksi. Lisättiin etusivulle listaus suosituimmista saleista.

--- a/application/templates/gym/list.html
+++ b/application/templates/gym/list.html
@@ -11,7 +11,7 @@
     <tr>
       <th>Gym</th>
       <th>Joined</th>
-      <th>Delete</th>
+      <th>Remove</th>
       <th>Edit</th>
     </tr>
     {% for gym in gyms %}
