--- a/application/templates/lift/new.html
+++ b/application/templates/lift/new.html
@@ -94,7 +94,7 @@
 			<td>
 				
 		<form method="POST" action="{{ url_for('gym_add', gym_id=gym.id) }}">
-				<input type="submit" class="btn btn-primary" value="Add"/>
+				<input type="submit" class="btn btn-primary" value="Join"/>
 		</form>
 			
 			</td>
@@ -110,7 +110,7 @@
 	    			<li style="color:red;"> {{error}} </li>
 	    		{% endfor %}
 			</ul>
-			  <td><input type="submit" class="btn btn-primary" value="Add"/></td>
+			  <td><input type="submit" class="btn btn-primary" value="Join"/></td>
 
 	  </form>
 	</tr>
